--- a/.env.example
+++ b/.env.example
@@ -28,5 +28,24 @@ AD_CHANNEL_ID=123456789012345678
 # Channel ID where ticket transcripts should be sent
 TRANSCRIPT_CHANNEL_ID=123456789012345678
 
+# Channel IDs used for anonymous announcements. When an admin sends a
+# message in ANNOUNCEMENT_SOURCE_CHANNEL_ID, the bot will delete the
+# original message and repost it in ANNOUNCEMENT_CHANNEL_ID under the
+# bot's identity. This allows administrators to make announcements
+# without revealing their username.
+ANNOUNCEMENT_SOURCE_CHANNEL_ID=123456789012345678
+ANNOUNCEMENT_CHANNEL_ID=123456789012345678
+
 # Default volume for the music player (0–100)
 MUSIC_VOLUME=50
+
+# OAuth2 configuration for adding users to your guild via the guilds.join scope.
+# These values are required if you plan to use the joinlink and joincomplete commands.
+# OAUTH_CLIENT_ID: the Client ID of your Discord application
+OAUTH_CLIENT_ID=1472762695282458664
+# OAUTH_CLIENT_SECRET: the Client Secret of your Discord application
+OAUTH_CLIENT_SECRET=hEQFOV2ghYaeZgjFsBFrXALoN5sGcAiJ
+# OAUTH_REDIRECT_URI: the redirect URI registered in your application settings
+OAUTH_REDIRECT_URI=https://www.911gamingstore.com
+# TARGET_GUILD_ID: the ID of the guild to add authorised users to
+TARGET_GUILD_ID=681663750692143124
