--- a/.env.example
+++ b/.env.example
@@ -42,10 +42,10 @@ MUSIC_VOLUME=50
 # OAuth2 configuration for adding users to your guild via the guilds.join scope.
 # These values are required if you plan to use the joinlink and joincomplete commands.
 # OAUTH_CLIENT_ID: the Client ID of your Discord application
-OAUTH_CLIENT_ID=1472762695282458664
+OAUTH_CLIENT_ID=
 # OAUTH_CLIENT_SECRET: the Client Secret of your Discord application
-OAUTH_CLIENT_SECRET=hEQFOV2ghYaeZgjFsBFrXALoN5sGcAiJ
+OAUTH_CLIENT_SECRET=
 # OAUTH_REDIRECT_URI: the redirect URI registered in your application settings
-OAUTH_REDIRECT_URI=https://www.911gamingstore.com
+OAUTH_REDIRECT_URI=
 # TARGET_GUILD_ID: the ID of the guild to add authorised users to
-TARGET_GUILD_ID=681663750692143124
+TARGET_GUILD_ID=
